# leeward

./: .gitignore  ADOPTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE.md  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
contrib/: leeward.system.service  leeward.user.service
crates/leeward-cli/: Cargo.toml
crates/leeward-cli/src/: main.rs
crates/leeward-core/: Cargo.toml
crates/leeward-core/src/: config.rs  error.rs  lib.rs  pipe.rs  protocol.rs  result.rs  shm.rs  worker.rs
crates/leeward-core/src/isolation/: cgroups.rs  clone3.rs  landlock.rs  mod.rs  mounts.rs  namespace.rs  seccomp.rs
crates/leeward-daemon/: Cargo.toml
crates/leeward-daemon/src/: config.rs  iouring.rs  main.rs  pool.rs  protocol.rs  server.rs
crates/leeward-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/leeward-ffi/src/: lib.rs
nix/: lib.nix  module.nix  packages.nix  shell.nix
