[package]
name = "leeward-daemon"
description = "Persistent sandbox daemon with worker pool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "leeward-daemon"
path = "src/main.rs"

[dependencies]
leeward-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
io-uring = { workspace = true }
memfd = { workspace = true }
anyhow = "1"

[lints]
workspace = true
