[package]
name = "leeward-ffi"
description = "C FFI bindings for leeward"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "leeward"
crate-type = ["cdylib", "staticlib"]

[dependencies]
leeward-core = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cbindgen = "0.28"

[lints]
workspace = true
